Changed Spring projectn name.

--- a/Sprint2/Sprint_2_Spring/.project
+++ b/Sprint2/Sprint_2_Spring/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Sp2</name>
+	<name>Sprint_2_Spring</name>
 	<comment></comment>
 	<projects>
 	</projects>
